<resources>
    <string name="app_name">手机鼠标</string>
    <string name="show">触摸屏</string>
    <string name="ip">请输入连接主机IP</string>
    <string name="port">请输入端口</string>
    <string name="connect">Connect</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left">左键</string>
    <string name="slide">滚轮</string>
    <string name="right">右键</string>
</resources>